# Distrib

./: .gitignore  README.txt
.cmake/api/v1/reply/: cache-v2-50fdebcfd277841d0058.json  cmakeFiles-v1-9f20578efa5b5b252021.json  codemodel-v2-f9cecb55c8bcd4414230.json  index-2023-06-23T04-24-00-0383.json  target-annihilation-Release-a16c1b73080ba99335d1.json  target-annihilation_rd-Release-98ad06d9bfd7d7e7a494.json  (+8 more)
.qtc_clangd/: compile_commands.json
Distribution/: CMakeLists.txt  CMakeLists.txt.user2  annihilation.cpp  annihilation_rd.cpp  annihilation_rd_vector.cpp  annihilation_vector.cpp  buld_parametrs.txt  conversions.cpp  diff_solve.hpp  distrib_vector_grid.cpp  distrib_vector_grid_grob.cpp  distrib_vector_grid_grob_SD.cpp  distrib_vector_grid_v1.cpp  functions.hpp  graphs.cpp  intersection.cpp  main.cpp  main_1.cpp  main_2Comp.cpp  main_T.cpp  main_testing_methods.cpp  matrix2.cpp  matrix_modelling.cpp  matrix_modelling_elastic.cpp  matrix_modelling_last.cpp  plot_data.cpp  plot_velocity.cpp  r_distrib.cpp  simple_distrib.cpp  test_cam_parser.hpp  test_cmd_parser.cpp  test_cmd_parser1.cpp  test_save_load.cpp  tests_0.cpp  Новый текстовый документ.txt
Distribution/func/: arg_parser.hpp  cbals_functions.hpp  dens_grid.hpp  el_histo.hpp  load_histo.hpp  matrix_functions.hpp  move_to_go.hpp  random_defs.hpp  table_func.hpp  traj.hpp
bin_cnv/: bin_cnv.cpp  ihg.cpp  plot_le_grid.cpp
build-Distribution-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  507994224.tmp  763481.tmp  CMakeCache.txt  CMakeCache.txt.prev  after.txt  before.txt  build.ninja  cmake_install.cmake  dl_res.mat  qtcsettings.cmake
build-Distribution-Desktop_Qt_6_0_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Distribution-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  1017793970.tmp  124542212.tmp  13863614.tmp  140560054.tmp  153704687.tmp  170754512.tmp  205352897.tmp  20920366.tmp  222854548.tmp  229934878.tmp  235379005.tmp  25385334.tmp  283863929.tmp  304309329.tmp  326527827.tmp  355428997.tmp  374891030.tmp  385494931.tmp  394006702.tmp  409692730.tmp  42625614.tmp  42753070.tmp  502755081.tmp  507994224.tmp  511309.tmp  517722835.tmp  528194034.tmp  531576303.tmp  56231691.tmp  605048207.tmp  6895056.tmp  731951317.tmp  763481.tmp  834913901.tmp  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  (+2 more)
calc_001/fun/: config_1.txt  fractions.txt
calc_001/grob/: LE_func.txt  LE_func_json.txt  config_1.txt  config_2.txt  config_2t.txt  fractions.txt  goLE_H_function.txt  gogrid_L.txt  h_grid_100_dm.txt
calc_001/grob/test1/: dh.txt  dh_out.txt  dl_out.txt  hl.txt  lh.txt
calcs/P-test_grid/: config_capt.txt  plotting.txt
calcs/P-test_grid/capt/: LE.txt  l_grid.txt
calcs/P01-10-1/: config_capt.txt  config_rd.txt  script_ann.bat  script_evolute.bat  script_graph.bat  script_graph_f.bat
calcs/P01-10-1/capt/: fractions.txt  h_grid.txt  pout.txt
calcs/P01-10-1/graphics/: CH_INIT.txt  CH_R_INIT.txt  CL_INIT.txt  CL_R_INIT.txt  H-.txt  L-.txt
calcs/P02-100-100/: config_capt.txt  config_evolute.txt  script_ann.bat  script_graph.bat  script_graph_f.bat
calcs/P02-100-100/capt/: fractions.txt  l_grid.txt  pout.txt
calcs/P02-100-100/graphics/: CH_INIT.txt  CH_R_INIT.txt  CL_R_INIT.txt  H-.txt  L-.txt
calcs/template/: config_capt.txt  config_evolute.txt  config_rd.txt  script_ann.bat  script_capture.bat  script_evolute.bat  script_graph.bat  script_graph_f.bat
calcs/template_elastic/: config_capt.txt  config_evolute.txt  script_ann.bat  script_graph.bat  script_graph_f.bat
configs/: d_config.txt
factors/: __factors.hpp  factors.hpp
release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
release/.qtc_clangd/: compile_commands.json
test_working/: dens.txt  le.txt  my_histo.txt
tests/: config_1.txt  config_2.txt  config_3.txt  elements.txt  fractions.txt  h_grid.txt  log.txt  my_grid.txt
tests/100_dm/: config_1.txt  config_1_full.txt  config_1_light.txt  config_2.txt  config_2_l.txt  config_3.txt  conversion_script.txt  fractions.txt  how-to.txt  mat_pout.json.txt
tests/100_dm/ann/: vsd.txt
tests/100_dm/capt/: LE.json.txt  fractions.txt  l_grid_100_dm.txt  pout.txt
tests/100_dm/capt_light/: LE.json.txt  h_grid_100_dm.txt  pout.txt
tests/100_dm/graphics/: CH_FIN.txt  CH_FIN_1.txt  CL_FIN.txt  CL_FIN_1.txt  H-.txt  H_FINAL.txt  H_INIT.txt  H_SLICE.txt  L-.txt  L_FINAL.txt  L_INIT.txt  L_SLICE.txt  capt_h.txt  r_plot.txt
tests/10_GeV/: config_1.txt  fractions.txt  h_grid.txt  le.txt  out.txt
tests/test_mat/: CH_out.matrix  CL_out.matrix  config.txt  config1.txt  dh_out.matrix  dl_out.matrix  eh.matrix  el.matrix  hl.matrix  lh.matrix
tests/test_mat/inits/: dl.matrix
tests/test_mat/mats/: ann_h.matrix  ann_hh.matrix  ann_hl.matrix  ann_l.matrix  ann_ll.matrix  hh.matrix  lh.matrix  ll.matrix
tests/test_mat/outputs/: ch_final.matrix  cl_final.matrix  dh_final.matrix  dl_final.matrix  out.txt
tests/test_mat_e/: config.txt
tests/test_mat_e/mats/: c.matrix  sc.matrix
tests/test_mat_e/outputs/: c_final.matrix  d_final.matrix  out.txt
tests/try_test/: config_100_-0.0001.txt  config_100_-0.00015000000000000001.txt  config_100_-0.0002.txt  config_100_-0.00030000000000000003.txt  config_100_-0.0004.txt  config_100_-5e-05.txt  config_100_0.0.txt  config_100_0.0001.txt  config_100_0.00015000000000000001.txt  config_100_0.0002.txt  config_100_0.00030000000000000003.txt  config_100_0.0004.txt  config_100_0.txt  config_100_5e-05.txt  config_10_-0.0001.txt  config_10_-0.00015000000000000001.txt  config_10_-0.0002.txt  config_10_-5e-05.txt  config_10_0.0.txt  config_10_0.0001.txt  config_10_0.00015000000000000001.txt  config_10_0.0002.txt  config_10_0.txt  config_10_5e-05.txt  config_15_0.0.txt  config_20_0.0.txt  config_30_0.0.txt  config_30_0.txt  config_40_0.0.txt  config_50_0.0.txt  config_50_0.txt  config_60_0.0.txt  config_70_0.0.txt  config_70_0.txt  config_85_0.0.txt  config_template.txt  df.txt  df_1.txt  df_dmk.txt  df_dmk10.txt  (+40 more)
(+2465 files in other folders)
